# just-it-backend

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
accounts/: api.py  models.py  schema.py  utils.py
accounts/migrations/: 0001_initial.py  0002_auto_20230413_1603.py
auth/: api.py  models.py  schema.py  utils.py
common/: consts.py  middleware.py  schema.py  utils.py
common/utils/: auth.py  s3_upload.py
justit/: api.py  asgi.py  settings.py  urls.py  wsgi.py
members/: api.py  models.py  schema.py  utils.py
members/migrations/: 0001_initial.py  0002_member_last_login_at.py  0003_member_status.py  0004_alter_member_status.py  0005_alter_member_profile_image.py
posts/: api.py  models.py  schema.py
posts/migrations/: 0001_initial.py  0002_auto_20230425_0939.py  0003_post_bookmarks.py  0004_reply.py
tags/: api.py  models.py  schema.py
tags/migrations/: 0001_initial.py  0002_customization.py
