[tool.poetry]
name = "just-it-backend"
version = "0.1.0"
description = "just-it backend"
authors = ["2jisu <jisu.jjang88@gmail.com>"]
readme = "README.md"
packages = [{include = "just_it_backend"}]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.2.18"
black = "^23.1.0"
pre-commit = "2.9"
mysqlclient = "^2.1.1"
PyMySQL = "^1.0.2"
django-ninja = "^0.21.0"
PyJWT = "^2.6.0"
django-cors-headers = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
